--- a/css/font.css
+++ b/css/font.css
@@ -1,7 +1,7 @@
 /*
 Error: Undefined mixin 'border-radius'.
-        on line 130 of /Users/teresachu/www/JB/cmd/../scss/font.scss, in `border-radius'
-        from line 130 of /Users/teresachu/www/JB/cmd/../scss/font.scss
+        on line 130 of /Users/oa/www/case/JB/cmd/../scss/font.scss, in `border-radius'
+        from line 130 of /Users/oa/www/case/JB/cmd/../scss/font.scss
 
 125: }
 126: 
@@ -16,65 +16,63 @@ Error: Undefined mixin 'border-radius'.
 135: }
 
 Backtrace:
-/Users/teresachu/www/JB/cmd/../scss/font.scss:130:in `border-radius'
-/Users/teresachu/www/JB/cmd/../scss/font.scss:130
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:352:in `block in visit_mixin'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/stack.rb:98:in `block in with_mixin'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/stack.rb:115:in `with_frame'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/stack.rb:98:in `with_mixin'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:350:in `visit_mixin'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/stack.rb:79:in `block in with_base'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/stack.rb:115:in `with_frame'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/stack.rb:79:in `with_base'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `visit'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `block (2 levels) in visit_rule'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `map'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `block in visit_rule'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:432:in `visit_rule'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/stack.rb:79:in `block in with_base'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/stack.rb:115:in `with_frame'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/stack.rb:79:in `with_base'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `visit'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:161:in `visit'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:10:in `visit'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/tree/root_node.rb:20:in `render'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/engine.rb:284:in `render'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:17:in `block in render'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:29:in `with_import_scope'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:16:in `render'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:494:in `update_stylesheet'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-1.0.3/lib/compass/sass_compiler.rb:40:in `compile!'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-1.0.3/lib/compass/commands/update_project.rb:49:in `perform'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-1.0.3/lib/compass/commands/base.rb:18:in `execute'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-1.0.3/lib/compass/commands/project_base.rb:19:in `execute'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-1.0.3/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-1.0.3/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-1.0.3/bin/compass:30:in `block in <top (required)>'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/gems/compass-1.0.3/bin/compass:44:in `<top (required)>'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/bin/compass:23:in `load'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/bin/compass:23:in `<main>'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/bin/ruby_executable_hooks:24:in `eval'
-/Users/teresachu/.rvm/gems/ruby-2.5.3/bin/ruby_executable_hooks:24:in `<main>'
+/Users/oa/www/case/JB/cmd/../scss/font.scss:130:in `border-radius'
+/Users/oa/www/case/JB/cmd/../scss/font.scss:130
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:352:in `block in visit_mixin'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/stack.rb:98:in `block in with_mixin'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/stack.rb:98:in `with_mixin'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:350:in `visit_mixin'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `visit'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `block (2 levels) in visit_rule'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `map'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `block in visit_rule'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:432:in `visit_rule'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `visit'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:52:in `map'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:161:in `visit'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:10:in `visit'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/tree/root_node.rb:20:in `render'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/engine.rb:284:in `render'
+/Library/Ruby/Gems/2.6.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:17:in `block in render'
+/Library/Ruby/Gems/2.6.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:29:in `with_import_scope'
+/Library/Ruby/Gems/2.6.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:16:in `render'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:494:in `update_stylesheet'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:209:in `each'
+/Library/Ruby/Gems/2.6.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Library/Ruby/Gems/2.6.0/gems/compass-1.0.3/lib/compass/sass_compiler.rb:40:in `compile!'
+/Library/Ruby/Gems/2.6.0/gems/compass-1.0.3/lib/compass/commands/update_project.rb:49:in `perform'
+/Library/Ruby/Gems/2.6.0/gems/compass-1.0.3/lib/compass/commands/base.rb:18:in `execute'
+/Library/Ruby/Gems/2.6.0/gems/compass-1.0.3/lib/compass/commands/project_base.rb:19:in `execute'
+/Library/Ruby/Gems/2.6.0/gems/compass-1.0.3/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
+/Library/Ruby/Gems/2.6.0/gems/compass-1.0.3/lib/compass/exec/sub_command_ui.rb:15:in `run!'
+/Library/Ruby/Gems/2.6.0/gems/compass-1.0.3/bin/compass:30:in `block in <top (required)>'
+/Library/Ruby/Gems/2.6.0/gems/compass-1.0.3/bin/compass:44:in `<top (required)>'
+/usr/local/bin/compass:23:in `load'
+/usr/local/bin/compass:23:in `<main>'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined mixin 'border-radius'.\A         on line 130 of /Users/teresachu/www/JB/cmd/../scss/font.scss, in `border-radius'\A         from line 130 of /Users/teresachu/www/JB/cmd/../scss/font.scss\A \A 125: }\A 126: \A 127: .mailbox {\A 128:   display: inline-block;\A 129:   width: 100%;\A 130:   @include border-radius(3px);\A 131:   background-color: $grey_l;\A 132:   font-size: 1.15rem;\A 133:   padding: 10px 15px;\A 134:   color: $font-deep-black;\A 135: }"; }
+  content: "Error: Undefined mixin 'border-radius'.\A         on line 130 of /Users/oa/www/case/JB/cmd/../scss/font.scss, in `border-radius'\A         from line 130 of /Users/oa/www/case/JB/cmd/../scss/font.scss\A \A 125: }\A 126: \A 127: .mailbox {\A 128:   display: inline-block;\A 129:   width: 100%;\A 130:   @include border-radius(3px);\A 131:   background-color: $grey_l;\A 132:   font-size: 1.15rem;\A 133:   padding: 10px 15px;\A 134:   color: $font-deep-black;\A 135: }"; }
